navigation bar + reload page with newly created recipe after post to /recipe/newRecipe